--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 
         <p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
 
-        <p><span>PHARRELLWILLIAMS.COM
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span>PHARRELLWILLIAMS.COM</span>
+    
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt= "COLUMBIA RECORDS LOGO">
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        COLUMBIARECORDS.COM</span></p>
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+       
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
          <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt= "SONY LOGO">
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
     </div>
